src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/valid/CD4AC3006.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3006 {
	interface A;
}