src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/CD4AC3005.cd
package de.cd4analysis.cocos;

classdiagram CD4AC3005 {

	public interface A;
	protected interface B;
	private interface C;
	static interface D;
	final interface E;
	/ interface F;

}